--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 header{
     background-color: #383d58;
     color: white;
+    display: flex;
+    justify-content: space-around;
+}
+.cabecalho-imagem{
+    width: 20%;
 }
