--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    font-family: "Poppins", sans-serif;
+}
 .cabecalho{
     background-color: #383D58;
     color:white;
@@ -20,7 +23,14 @@
 }
 .escola-imagem{
     width: 25%;
+}
+.escola{
     background-image: linear-gradient(#383D58,#00C0EB);
+    color: white;
+    display: flex;
+}
+.escola-conteudo{
+    width: 35%;
 }
 
 
