--- a/style.css
+++ b/style.css
@@ -28,12 +28,29 @@ body{
     background-image: linear-gradient(#383D58,#00C0EB);
     color: white;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
 }
 .escola-conteudo{
     width: 35%;
 }
+.escola-titulo{
+    padding: 24px 0;
+}
 .estudante-imagem{
-    width:120px;
+    width: 120px;
+}
+.estudante-icone{
+    width: 24px;
+}
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
 }
 
 
